Modify mapping to dto exception to unchecked